--- a/Mon_PK_et_moi/Base.lproj/Main.storyboard
+++ b/Mon_PK_et_moi/Base.lproj/Main.storyboard
@@ -2063,13 +2063,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="hKQ-Gr-plO">
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hKQ-Gr-plO">
                                 <rect key="frame" x="16" y="126" width="343" height="124"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="124" id="nT8-0a-gqf"/>
                                 </constraints>
-                                <date key="date" timeIntervalSinceReferenceDate="541086276.42568302">
-                                    <!--2018-02-23 13:44:36 +0000-->
+                                <date key="date" timeIntervalSinceReferenceDate="543794400.42568302">
+                                    <!--2018-03-26 22:00:00 +0000-->
                                 </date>
                                 <date key="minimumDate" timeIntervalSinceReferenceDate="536497200">
                                     <!--2018-01-01 11:00:00 +0000-->
