--- a/Mon_PK_et_moi/Base.lproj/Main.storyboard
+++ b/Mon_PK_et_moi/Base.lproj/Main.storyboard
@@ -283,27 +283,18 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nom de l'activité" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2T2-HA-c9q">
                                 <rect key="frame" x="106" y="426" width="164" height="27"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="27" id="T8E-4u-sJt"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="0.90000000000000002" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Félicitations !" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gek-L7-joq">
                                 <rect key="frame" x="109" y="219" width="157" height="34"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="kTW-ff-dgb"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vous avez fini l'activité :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jiT-Oa-nD1">
                                 <rect key="frame" x="92" y="397" width="191" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="ghP-QQ-NTG"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="0.79818600171232879" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -311,22 +302,26 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="quality.png" translatesAutoresizingMaskIntoConstraints="NO" id="ZvB-H2-oka">
                                 <rect key="frame" x="123" y="261" width="128" height="128"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="128" id="rfR-3I-jCh"/>
+                                    <constraint firstAttribute="height" constant="128" id="Ivq-4a-xPx"/>
+                                    <constraint firstAttribute="width" constant="128" id="jr4-AI-TE4"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.035294117649999998" green="0.60392156860000001" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="nrW-uw-NUd" firstAttribute="top" secondItem="2T2-HA-c9q" secondAttribute="bottom" constant="214" id="DiR-F7-VFe"/>
-                            <constraint firstItem="jiT-Oa-nD1" firstAttribute="centerX" secondItem="2T2-HA-c9q" secondAttribute="centerX" id="Lwc-Dr-asJ"/>
-                            <constraint firstItem="Gek-L7-joq" firstAttribute="centerX" secondItem="ZvB-H2-oka" secondAttribute="centerX" id="Rdf-Nq-3wb"/>
-                            <constraint firstItem="2T2-HA-c9q" firstAttribute="top" secondItem="jiT-Oa-nD1" secondAttribute="bottom" constant="8" symbolic="YES" id="cIa-6K-eRP"/>
-                            <constraint firstItem="Gek-L7-joq" firstAttribute="top" secondItem="RBs-l0-850" secondAttribute="bottom" constant="199" id="fJ7-8g-COQ"/>
-                            <constraint firstItem="ZvB-H2-oka" firstAttribute="top" secondItem="Gek-L7-joq" secondAttribute="bottom" constant="8" symbolic="YES" id="oen-ii-C6c"/>
-                            <constraint firstItem="ZvB-H2-oka" firstAttribute="centerX" secondItem="jiT-Oa-nD1" secondAttribute="centerX" id="qTu-vh-WBt"/>
-                            <constraint firstItem="jiT-Oa-nD1" firstAttribute="top" secondItem="ZvB-H2-oka" secondAttribute="bottom" constant="8" symbolic="YES" id="vuB-Z2-Xl9"/>
-                            <constraint firstItem="ZvB-H2-oka" firstAttribute="centerX" secondItem="0Dt-EV-Ozt" secondAttribute="centerX" id="yxt-OL-ROi"/>
+                            <constraint firstItem="ZvB-H2-oka" firstAttribute="top" secondItem="Gek-L7-joq" secondAttribute="bottom" constant="8" id="GLE-Yk-NYZ"/>
+                            <constraint firstItem="ZvB-H2-oka" firstAttribute="top" secondItem="Gek-L7-joq" secondAttribute="bottom" constant="8" id="POg-qO-5AT"/>
+                            <constraint firstItem="2T2-HA-c9q" firstAttribute="top" secondItem="jiT-Oa-nD1" secondAttribute="bottom" constant="8" id="Q2l-nr-PQb"/>
+                            <constraint firstItem="2T2-HA-c9q" firstAttribute="centerX" secondItem="0Dt-EV-Ozt" secondAttribute="centerX" id="QwG-PD-hCM"/>
+                            <constraint firstItem="jiT-Oa-nD1" firstAttribute="top" secondItem="ZvB-H2-oka" secondAttribute="bottom" constant="8" id="UUV-Wp-xJT"/>
+                            <constraint firstItem="Gek-L7-joq" firstAttribute="centerX" secondItem="0Dt-EV-Ozt" secondAttribute="centerX" id="Vkl-5p-Q1E"/>
+                            <constraint firstItem="Gek-L7-joq" firstAttribute="top" secondItem="RBs-l0-850" secondAttribute="bottom" constant="199" id="YEO-Am-G5R"/>
+                            <constraint firstItem="2T2-HA-c9q" firstAttribute="top" secondItem="jiT-Oa-nD1" secondAttribute="bottom" constant="8" id="Yj3-SI-ZHS"/>
+                            <constraint firstItem="jiT-Oa-nD1" firstAttribute="top" secondItem="ZvB-H2-oka" secondAttribute="bottom" constant="8" id="aND-m1-wJL"/>
+                            <constraint firstItem="ZvB-H2-oka" firstAttribute="centerX" secondItem="0Dt-EV-Ozt" secondAttribute="centerX" id="c1d-sN-xz7"/>
+                            <constraint firstItem="jiT-Oa-nD1" firstAttribute="centerX" secondItem="0Dt-EV-Ozt" secondAttribute="centerX" id="ggb-9J-hoU"/>
+                            <constraint firstItem="nrW-uw-NUd" firstAttribute="top" secondItem="2T2-HA-c9q" secondAttribute="bottom" constant="214" id="r5M-9C-Twe"/>
                         </constraints>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="cWz-Ph-bvH" appends="YES" id="LEr-ck-982"/>
